--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <video autoplay muted loop playsinline id="myVideo"><source src="static/page1.mp4" type="video/mp4"></video>
-    <video autoplay muted loop id="mydancing"><source src="static/movie2.mp4" type="video/mp4"></video>
+    <video autoplay muted loop playsinline id="mydancing"><source src="static/movie2.mp4" type="video/mp4"></video>
     <div class=content>
       <nav class="navbar navbar-expand-lg navbar-light" id= "top">
     <div class="container-fluid">
